# AuraSync

./: .gitignore  README.md
AuraSync2/: settings.gradle.kts
AuraSync2/app/: build.gradle.kts
AuraSync2/app/src/androidTest/java/max/project/aurasync/: ExampleInstrumentedTest.kt
AuraSync2/app/src/main/: AndroidManifest.xml
AuraSync2/app/src/main/java/max/project/aurasync/: MainActivity.kt
AuraSync2/app/src/main/java/max/project/aurasync/observer/: AuraRecursiveObserver.kt
AuraSync2/app/src/main/java/max/project/aurasync/service/: AuraService.kt
AuraSync2/app/src/main/java/max/project/aurasync/ui/theme/: Color.kt  Theme.kt  Type.kt
AuraSync2/app/src/main/proto/: sync_event.proto
AuraSync2/app/src/main/res/values/: strings.xml  themes.xml
AuraSync2/app/src/main/res/xml/: data_extraction_rules.xml
AuraSync2/app/src/test/java/max/project/aurasync/: ExampleUnitTest.kt
AuraSync2/gradle/: libs.versions.toml
AuraSync2/gradle/wrapper/: gradle-wrapper.properties
async_file_r/: Cargo.toml  build.rs
async_file_r/src/: main.rs
proto/: sync_event.proto
