[package]
name = "async_file_r"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
notify = "8.2.0"

prost = "0.14.1"
dashmap = "5.5.3"

# Binary S8.2.0ization (The "Prime" way to send data faster than JSON)
serde = { version = "1.0.228", features = ["derive"] }
bincode = "2.0.1"
blake3 = "1.5.0"
regex = "1.10"
lazy_static = "1.4"
# Networking & IP Discovery
local-ip-address = "0.6.8"
socket2 = { version = "0.6.1", features = ["all"] }

# Utility for paths
walkdir = "2.5.0"

[build-dependencies]
prost-build = "0.14.1"
protoc-bin-vendored = "3.0.0"